--- a/tdlbook-main/rmd/09-implementation-and-numerical-experiments.rmd
+++ b/tdlbook-main/rmd/09-implementation-and-numerical-experiments.rmd
@@ -120,42 +120,44 @@ knitr::kable(domains, align=c('l', 'c', 'c', 'c', 'c'), booktabs=TRUE, caption="
 
 **$\mbox{CCNN}_{Graph}$的架构**. 对于图\@ref(fig:mesh-net)(c)中给出的$\mbox{CCNN}_{Graph}$， 我们选择了定义\@ref(def:general-pooling-hoan)中给出的 CCNN 池架构，该架构推送来自顶点、边和面的信号，并在做出最终预测之前将它们的信息聚合到高阶胞腔。对于[@bianchi2020mincutpool]中的数据集，我们用两种架构进行了实验：第一种架构与图\@ref(fig:mesh-net)(b)中所示的$\mbox{CCNN}_{SHREC}$相同，第二种架构是图\@ref(fig:mesh-net)(c)中所示的$\mbox{CCNN}_{Graph}$。我们报告的是 $\mbox{CCNN}_{Graph}$的实验结果，因为它的性能更优。需要注意的是，当这种神经网络在底层单纯复形上执行时，通常不会考虑关联矩阵 $B_{0,1}$ and $B_{1,3}$，但是配备了这些额外关联矩阵的 CC 结构有助于提高 $\mbox{CCNN}_{Graph}$ 的泛化性能。
 
-## Pooling with mapper on graphs and data classification
+## 在图上用映射器（mapper）算法池化和数据分类{#pooling-with-mapper-on-graphs-and-data-classification}
 
-We perform experiments to measure the effectiveness of the MOG pooling strategy discussed in Section \@ref(mapper-and-the-cc-pooling-operation). Recall that the MOG algorithm requires two pieces of input: the 1-skeleton of a CC $\mathcal{X}$, and a scalar function on the vertices of $\mathcal{X}$. Our choice for the input scalar function is the average geodesic distance (AGD) [@KimLipmanChen2010], which is suitable for shape detection as it is invariant to reflection and rotation. For two entities $u$ and $v$ on a graph, the geodesic distance between $u$ and $v$, denoted by $d(v,u)$, is computed using Dijkstra's shortest path algorithm. The AGD is given by the following equation:
+我们通过实验来评估第 \@ref(mapper-and-the-cc-pooling-operation)节中讨论的MOG池化操作策略的有效性。回顾一下，MOG 算法需要两部分输入：CC $\mathcal{X}$ 的 1-skeleton和 $\mathcal{X}$ 顶点上的标量函数。我们选择的输入标量函数是平均测地距离（Average geodesic distance，AGD）[@KimLipmanChen2010]，它与反射和旋转无关，因此适用于形状检测。对于图上的两个实体 $u$ 和 $v$，使用 Dijkstra 的最短路径算法计算出 $u$ 和 $v$ 之间的测地距离，用 $d(v,u)$ 表示。AGD 的计算公式如下：
 \begin{equation}
 AGD(v)=\frac{1}{|V|}\sum_{u\in V}d(v,u).
 (\#eq:agd)
 \end{equation}
 
-From Equation \@ref(eq:agd), it is immediate that the vertices near the center of the graph are likely to have low function values, while points on the periphery are likely to have high values. This observation has been utilized to study graph symmetry [@KimLipmanChen2010], and it provides a justification for selecting the AGD for the MOG pooling strategy. Figure \@ref(fig:pooling-examples) presents a few examples of applying the MOG pooling strategy using AGD on the SHREC11 dataset.
+从公式 \@ref(eq:agd)可以看出，靠近图中心的顶点可能具有较低的函数值，而位于外围的点可能具有较高的函数值。这一观察结果已被用于研究图的对称性[@KimLipmanChen2010]，并为 MOG 池化策略选择 AGD 提供了理由。图 \@ref(fig:pooling-examples) 展示了在 SHREC11 数据集上使用 带AGD的MOG 池化策略的几个示例。
 
-```{r pooling-examples, echo=FALSE, fig.align="center", fig.cap="Examples of applying the MOG algorithm on the SHREC11 dataset [@lian2011shape]. In each figure, we show the original mesh graph on the left and the mapper graph on the right. The scalar function chosen for the MOG algorithm is the average geodesic distance (AGD). We observe that the pooled mapper graph has similar overall shape to the original graphs."}
+```{r pooling-examples, echo=FALSE, fig.align="center", fig.cap="在数据集SHREC11上[@lian2011shape]使用MOG算法的示例。 在每幅图中，我们左边显示的是原始网格图，右边显示的是映射图。MOG 算法选择的标量函数是平均测地距离（AGD）。我们观察到，池化后的映射图与原始图的整体形状相似."}
 knitr::include_graphics('figures/pooling_examples.png', dpi=NA)
 ```
 
-In order to demonstrate the effectiveness of our MOG pooling approach, we conduct three experiments on the SHREC11 dataset: mesh classification based on CC-pooling with input vertex and edge features (Section \@ref(mesh-classification-cc-pooling-with-input-vertex-and-edge-features)), mesh classification based on CC-pooling with input vertex features only (Section \@ref(mesh-classification-cc-pooling-with-input-vertex-features-only)), and point cloud classification based on CC-pooling with input vertex features only (Section \@ref(point-cloud-classification-cc-pooling-with-input-vertex-features-only)). The experiments in Sections \@ref(mesh-classification-cc-pooling-with-input-vertex-and-edge-features) and \@ref(mesh-classification-cc-pooling-with-input-vertex-features-only) utilize the mesh structure in the SHREC11 dataset, whereas the experiment in Section \@ref(point-cloud-classification-cc-pooling-with-input-vertex-features-only) utilizes its own point cloud version. In particular, we choose two simple CCNN architectures shown in Figure \@ref(fig:mesh-net)(d), denoted by $\mbox{CCNN}_{MOG1}$ and $\mbox{CCNN}_{MOG2}$, as opposed to the more complicated architecture of $\mbox{CCNN}_{SHREC}$ in Figure \@ref(fig:mesh-net)(b). The main difference between $\mbox{CCNN}_{MOG1}$ and $\mbox{CCNN}_{MOG2}$ is the choice of the input feature vectors as described next.
+为了证明我们的 MOG 池化方法的有效性，我们在 SHREC11 数据集上进行了三项实验： 基于输入顶点和边缘特征的 CC-pooing网格分类（参见第 \@ref(mesh-classification-cc-pooling-with-input-vertex-and-edge-features)节）、基于仅输入顶点特征的 CC-pooing的网格分类（参见第\@ref(mesh-classification-cc-pooling-with-input-vertex-features-only)节）和基于仅输入顶点特征的 CC-pooling点云分类（第 \@ref(mesh-classification-cc-pooling-with-input-vertex-features-only)节）、 以及基于仅输入顶点特征的 CC 汇集的点云分类（参见第\@ref(point-cloud-classification-cc-pooling-with-input-vertex-features-only）节）。在\@ref(mesh-classification-cc-pooling-with-input-vertex-and-edge-features)和 \@ref(mesh-classification-cc-pooling-with-input-vertex-features-only) 节中的实验利用了SHREC11数据集中的网格结构，而 \@ref(point-cloud-classification-cc-pooling-with-input-vertex-features-only) 节中的实验则利用了自己的点云版本。特别是，我们选择了两个简单的 CCNN 架构，如图 \@ref(fig:mesh-net)(d)所示，分别用 $\mbox{CCNN}_{MOG1}$ 和 $\mbox{CCNN}_{MOG2}$ 表示，而不是图  Figure \@ref(fig:mesh-net)(b)中更为复杂的 $\mbox{CCNN}_{SHREC}$ 架构。$\mbox{CCNN}_{MOG1}$ 和 $\mbox{CCNN}_{MOG2}$ 之间的主要区别在于输入特征向量的选择，这将在下文中介绍。
 
-### Mesh classification: CC-pooling with input vertex and edge features
+### 网格分类{#mesh-classification-cc-pooling-with-input-vertex-and-edge-features}
 
-In this experiment, we consider the vertex feature vector to be the position concatenated with the normal vectors for each vertex in the underlying mesh. For the edge features, we compute the first ten eigenvectors of the 1-Hodge Laplacian [@dodziuk1976finite; @eckmann1944harmonische] and attach a 10-dimensional feature vector to the edges of the underlying mesh. The CC that we consider here is 3-dimensional, as it consists of the triangular mesh (vertices, edges and faces) and of 3-cells. The 3-cells are obtained using the MOG algorithm, and are used for augmenting each mesh. We calculate the 3-cells via the MOG algorithm using the AGD scalar function as input. We conduct this experiment using the CCNN defined via the tensor diagram $\mbox{CCNN}_{MOG1}$ given in Figure \@ref(fig:mesh-net)(d). During training, we augment each mesh with ten additional meshes, with each of these additional meshes being obtained by a random rotation as well as 0.1% noise perturbation to the vertex positions. We train $\mbox{CCNN}_{MOG1}$ for 100 epochs using a learning rate of 0.0002 and the standard cross-entropy loss, and obtain an accuracy of 98.1%. While the accuracy of $\mbox{CCNN}_{MOG1}$ is lower than the one we report for $\mbox{CCNN}_{SHREC}$ (99.17%) in Table \@ref(tab:shrec), we note that $\mbox{CCNN}_{MOG1}$ requires a significantly smaller number of replications for mesh augmentation to achieve a similar accuracy ($\mbox{CCNN}_{MOG1}$ requires 10, whereas $\mbox{CCNN}_{SHREC}$ required 30 replications).
+在本实验中，我们将顶点特征向量视为底层网格中每个顶点的位置与法向量的连接。对于边缘特征，我们计算了 1-Hodge Laplacian [@dodziuk1976finite; @eckmann1944harmonische]的前十个特征向量，并为底层网格的边缘附加了一个 10 维特征向量。我们在此考虑的 CC 是三维的，因为它由三角形网格（顶点、边和面）和 3-cells组成。3-cells通过 MOG 算法获得，用于增强每个网格。 我们使用 AGD 标量函数作为输入，通过 MOG 算法计算 3-cells。 我们使用通过张量图$\mbox{CCNN}_{MOG1}$定义的 CCNN 进行了这项实验，张量图见图 \@ref(fig:mesh-net)(d)。在训练过程中，我们为每个网格添加了 10 个附加网格，每个附加网格都是通过随机旋转以及对顶点位置进行 0.1% 的噪声扰动获得的。我们使用 0.0002 的学习率和标准交叉熵损失对 $\mbox{CCNN}_{MOG1}$ 进行了 100 次训练，获得了 98.1% 的准确率。虽然 $\mbox{CCNN}_{MOG1}$ 的准确率低于我们在表\@ref(tab:shrec)中报告的 $\mbox{CCNN}_{SHREC}$ 的准确率（99. 17%），但我们注意到，$\mbox{CCNN}_{MOG1}$ 要达到类似的准确率，网格增强所需的重复次数要少得多（$\mbox{CCNN}_{MOG1}$ 需要 10 次重复，而 $\mbox{CCNN}_{SHREC}$ 需要 30 次重复）。
 
-**Architecture of $\mbox{CCNN}_{MOG1}$**. The tensor diagram $\mbox{CCNN}_{MOG1}$ of Figure \@ref(fig:mesh-net)(d) corresponds to a pooling CCNN. In particular, $\mbox{CCNN}_{MOG1}$ pushes forward the signal towards two different higher-order cells: the faces of the mesh as well as the 3-cells obtained from the MOG algorithm.
 
-### Mesh classification: CC-pooling with input vertex features only
+**$\mbox{CCNN}_{MOG1}$架构**. 图\@ref(fig:mesh-net)(d)中的张量图$\mbox{CCNN}_{MOG1}$对应于池化CCNN。 特别是，$\mbox{CCNN}_{MOG1}$ 将信号推向两个不同的高阶胞腔：网格面以及从 MOG 算法中获得的 3-cells。
 
-In this experiment, we consider the position and the normal vectors of the input vertices. The CC structure that we consider is the underlying graph structure obtained from each mesh; i.e., we only use the vertices and the edges, and ignore the faces. We augment this structure by 2-cells obtained via the MOG algorithm using the AGD scalar function as input. We choose the network architecture to be relatively simpler than $\mbox{CCNN}_{MOG1}$, and report it in Figure \@ref(fig:mesh-net)(d) as $\mbox{CCNN}_{MOG2}$. During training we augment each mesh with 10 additional meshes, with each of these additional meshes being obtained by a random rotation as well as 0.05% noise perturbation to the vertex positions. We train $\mbox{CCNN}_{MOG2}$ for 100 epochs using a learning rate of 0.0003 and the standard cross-entropy loss, and obtain an accuracy of 97.1%.
+### 网格分类：仅带输入顶点特征的CC-pooling{#mesh-classification-cc-pooling-with-input-vertex-features-only}
 
-**Architecture of $\mbox{CCNN}_{MOG2}$ for mesh classification**. The tensor diagram $\mbox{CCNN}_{MOG2}$ of Figure \@ref(fig:mesh-net)(d) corresponds to a pooling CCNN. In particular, $\mbox{CCNN}_{MOG2}$ pushes forward the signal towards a single 2-cell obtained from the MOG algorithm. Observe that the overall architecture of $\mbox{CCNN}_{MOG2}$ is similar in principle to AlexNet [@krizhevsky2017imagenet], where convolutional layers are followed by pooling layers.
+在本实验中，我们考虑输入顶点的位置和范数向量。
+我们所考虑的 CC 结构是从每个网格中获得的底层图结构；也就是说，我们只使用顶点和边，而忽略面。我们使用 AGD 标量函数作为输入，通过 MOG 算法获得的 2-cells来增强这一结构。我们选择了比 $\mbox{CCNN}_{MOG1}$ 相对简单的网络结构，并在图 \@ref(fig:mesh-net)(d)中报告为 $\mbox{CCNN}_{MOG2}$。在训练过程中，我们为每个网格添加了 10 个额外的网格，每个额外的网格都是通过随机旋转以及对顶点位置进行 0.05% 的噪声扰动获得的。我们使用 0.0003 的学习率和标准交叉熵损失对 $\mbox{CCNN}_{MOG2}$ 进行了 100 次训练，并获得了 97.1% 的准确率。
 
-### Point cloud classification: CC-pooling with input vertex features only
+**用于网格分类的$\mbox{CCNN}_{MOG2}$架构**. 图 \@ref(fig:mesh-net)(d) 中的张量图 $\mbox{CCNN}_{MOG2}$ 对应的是池化 CCNN。尤其，$\mbox{CCNN}_{MOG2}$ 将信号推向从 MOG 算法中获得的单个 2-cell。请注意，$\mbox{CCNN}_{MOG2}$ 的整体架构在原理上与 AlexNet [@krizhevsky2017imagenet] 相似，即卷积层之后是池化层。
 
-In this experiment, we consider point cloud classification on the SHREC11 dataset. The setup is similar in principle to the one studied in Section \@ref(mesh-classification-cc-pooling-with-input-vertex-features-only) where we consider only the features supported on the vertices of the point cloud as input. Specifically, for each mesh in the SHREC11 dataset, we sample 1,000 points from the surface of the mesh. Additionally, we estimate the normal vectors of the resulting point clouds using the Point Cloud Utils package [@point-cloud-utils]. To build the CC structure, we first consider the $k$-nearest neighborhood graph obtained from each point cloud using $k=7$. We then augment this graph by 2-cells obtained via the MOG algorithm using the AGD scalar function as input. We train the $\mbox{CCNN}_{MOG2}$ shown in Figure \@ref(fig:mesh-net)(d). During training, we augment each point cloud with 12 additional instances, each one of these instances being obtained by random rotation. We train $\mbox{CCNN}_{MOG2}$ for 100 epochs using a learning rate of 0.0003 and the standard cross-entropy loss, and obtain an accuracy of 95.2% (see Table \@ref(tab:shrec)).
+### 点云分类：仅带输入顶点特征得CC-pooling{#point-cloud-classification-cc-pooling-with-input-vertex-features-only}
 
-## Ablation studies
+在本实验中，我们考虑在 SHREC11 数据集上进行点云分类。实验设置与第\@ref(mesh-classification-cc-pooling-with-input-vertex-features-only) 节中研究的原理类似，我们只将点云顶点上支持的特征作为输入。 具体来说，对于 SHREC11 数据集中的每个网格，我们从网格表面采样 1000 个点。此外，我们还使用点云工具包（Point Cloud Utils package）[@point-cloud-utils]估算了所得点云的法向量（normal vector）。 为了构建 CC 结构，我们首先考虑从每个点云中获取的 $k$ 最近邻居图（ 设置$k=7$）。然后，我们使用 AGD 标量函数作为输入，通过 MOG 算法获得的 2-cells对该图进行扩充。我们训练的 $\mbox{CCNN}_{MOG2}$ 如图 \@ref(fig:mesh-net)(d)所示在训练过程中，我们为每个点云添加了 12 个额外的实例，每个实例都是通过随机旋转获得的。我们使用 0.0003 的学习率和标准交叉熵损失对 $mbox{CCNN}_{MOG2}$ 进行了 100 次训练，并获得了 95.2% 的准确率（见表\@ref(tab:shrec)）。
 
-In this section, we perform two ablation studies. The first ablation study reveals that pooling strategies in CCNNs have a crucial effect on predictive performance. The second ablation study demonstrates that CCNNs have better predictive capacity than GNNs; the advantage of CCNNs arises from their topological pooling operations and from their ability to learn from topological features.
+## 消融实验{#ablation-studies}
 
-**Pooling strategies in CCNNs**. To evaluate the impact of the choice of pooling strategy on predictive performance, we experiment with two pooling strategies using the SHREC11 classification dataset. The first pooling strategy is the MOG algorithm described in Section \@ref(pooling-with-mapper-on-graphs-and-data-classification); the results of this pooling strategy based on $\mbox{CCNN}_{MOG2}$ are discussed in Section \@ref(mesh-classification-cc-pooling-with-input-vertex-features-only) (97.1%). The second pooling strategy is briefly described as follows. For each mesh, we consider the 2-dimensional CC obtained by considering each 1-hop neighborhood to be the 1-cells in the CC and each 2-hop neighborhood to be the 2-cells in the CC. We train $\mbox{CCNN}_{MOG2}$, and obtain an accuracy of 89.2%, which is lower than 97.1%. These experiments suggest that the choice of pooling strategy has a crucial effect on predictive performance.
+在本节中，我们将进行两项消融研究。第一项消融研究表明，CCNN 中的池化策略对预测性能有至关重要的影响。第二项消融研究表明，CCNN 比 GNN 具有更好的预测能力；CCNN 的优势来自其拓扑池化操作以及从拓扑特征中学习的能力。
 
-**Comparing CCNNs to GNNs in terms of predictive performance**. Observe that $\mbox{CCNN}_{SHREC}$ has topological features of dimension one and two as inputs. On the other hand, $\mbox{CCNN}_{MOG2}$ has only vertex features as input, but it learns the higher-order cell latent features by using the push-forward operation that pushes the signal from 0-cells to the 2-cells obtained from the MOG algorithm. In both cases, using a higher-order structure is essential for improving predictive performance, even though two different strategies towards exploiting the higher-order structures are utilized. To support our claim, we run an experiment in which we replace the pooling layer in $\mbox{CCNN}_{MOG2}$ by the cochain operator induced by $A_{0,1}$, effectively rendering the neural network as a GNN. In this setting, using the same setup as in experiment \@ref(mesh-classification-cc-pooling-with-input-vertex-features-only), we obtain an accuracy of 84.56%. This experiment reveals the performance advantages of employing higher-order structures, either by utilizing the input topological features supported on higher-order cells or via pooling strategies that augment higher-order cells.
+**CCNNs中得池化策略**. 为了评估池化策略的选择对预测性能的影响，我们使用 SHREC11 分类数据集试验了两种池化策略。 第一种池化策略是第\@ref(pooling-with-mapper-on-graphs-and-data-classification)节中描述的 MOG 算法；第 \@ref(mesh-classification-cc-pooling-with-input-vertex-features-only) 节讨论了基于 $\mbox{CCNN}_{MOG2}$ 的这种池化策略的结果（97.1%）。 第二种池化策略简述如下。对于每个网格，我们考虑将每个 1-hop邻域视为 CC 中的 1-cells，将每个 2-hop邻域视为 CC 中的 2-cells，从而得到 2 维 CC。我们训练了 $\mbox{CCNN}_{MOG2}$，得到了 89.2% 的准确率，但是低于 97.1%。这些实验表明，池化策略的选择对预测性能有着至关重要的影响。
+
+**比较 CCNN 与 GNN 的预测性能**. 请注意，$\mbox{CCNN}_{SHREC}$ 的输入是一维和二维拓扑特征。 另一方面，$\mbox{CCNN}_{MOG2}$ 的输入只有顶点特征，但它通过使用前推操作，将信号从 0-cells推向从 MOG 算法中获得的 2-cells，从而学习高阶胞腔潜在特征。 在这两种情况下，使用高阶结构对提高预测性能都至关重要，尽管在利用高阶结构方面采用了两种不同的策略。 为了支持我们的说法，我们进行了一项实验，用$A_{0,1}$诱导的共链算子替换$\mbox{CCNN}_{MOG2}$中的池化操作层，从而有效地将神经网络转化为 GNN。在这种情况下，使用与实验 \@ref(mesh-classification-cc-pooling-with-input-vertex-features-only)相同的设置，我们获得了 84.56% 的准确率。这个实验揭示了采用高阶结构的性能优势，可以利用高阶胞腔支持的输入拓扑特征，也可以通过增强高阶胞腔的池化策略。
