--- a/tdlbook-main/rmd/11-conclusions.rmd
+++ b/tdlbook-main/rmd/11-conclusions.rmd
@@ -1,14 +1,18 @@
-# Conclusions
+# 结论{#conclusions}
 
-We have established a topological deep learning (TDL) framework that enables the learning of representations for data supported on topological domains. To this end, we have introduced combinatorial complexes (CCs) as a new topological domain to model and characterize the main components of TDL. Our framework provides a unification for many concepts that may be perceived as separate in the current literature. Specifically, we can reduce most deep learning architectures presented thus far in the literature to particular instances of combinatorial complex neural networks (CCNNs), based on computational operations defined on CCs. Our framework thus provides a platform for a more systematic exploration and comparison of the large space of deep learning protocols on topological spaces.
+我们建立了一个拓扑深度学习（topological deep learning，TDL）框架，能够学习拓扑域上支持的数据表征学习。为此，我们引入了组合复形（ combinatorial complexes，CC）作为一个新的拓扑域，以对 TDL 的主要组成部分进行建模和表征。我们的框架统一了许多在当前文献中可能被视为独立的概念。具体来说，我们可以根据 CC 上定义的计算操作，将迄今为止文献中介绍的大多数深度学习架归约为组合复形神经网络（combinatorial complex neural networks，CCNNs）的特定实例。因此，我们的框架为更系统地探索和比较拓扑空间深度学习协议的巨大空间提供了一个平台。
 
-**Limitations**. This work has laid out the foundations of a novel TDL framework. While TDL has great potential, similar to other novel learning frameworks, there are limitations, many of which are still not well-understood. Specifically, some known limitations involve:
+**局限性**. 本文工作为新型 TDL 框架奠定了基础。虽然 TDL 具有巨大的潜力，但与其他新型学习框架类似，它也存在局限性，其中许多局限性仍未得到很好的理解。具体来说，一些已知的局限性包括：
 
-- *Computational complexity*: The primary challenge for moving from graphs to richer topological domains is the combinatorial increase in the complexity to store and process data defined on such domains. Training a TDL network can be a computationally intensive task, requiring careful consideration of neighborhood functions and generalization performance. TDL networks also require a large amount of memory, especially when working with a large number of matrices during network construction. The topology of the network can also increase the computational complexity of training.
-- *The choice of the neural network architecture*: Choosing the appropriate neural network architecture for a given dataset and a given learning task can be challenging. The performance of a TDL network can be highly dependent on the choice of architecture and its hyperparameters. 
-- *Interpretability and explainability*: The architecture of a TDL network can make it difficult to interpret the learnt representations and understand how the network is making predictions. 
-- *Limited availability of datasets*: TDL networks require topological data, which we have found to be of limited availability. Ad hoc conversions of existing data to include higher-order relations may not always be ideal.
+- *计算复杂性*: 从图形转向更丰富的拓扑域所面临的主要挑战是，
+  + 存储和处理定义在此类域上的数据的组合复形复杂性的增加。
+  + 训练 TDL 网络是一项计算密集型任务，需要仔细考虑邻域函数和泛化性能。
+  + TDL 网络还需要大量内存，尤其是在网络构建过程中处理大量矩阵时。
+  + 网络的拓扑结构也会增加训练的计算复杂度。
+- *神经网络架构的选择*: 为给定的数据集和给定的学习任务选择合适的神经网络架构是一项挑战。TDL 网络的性能在很大程度上取决于架构及其超参数的选择。 
+- *可解释性和可说明性*: TDL 网络的结构可能会导致难以解释学习到的表征，也难以理解网络是如何进行预测的。 
+- *数据集的可用性有限*: TDL 网络需要拓扑数据，而我们发现拓扑数据的可用性有限。对现有数据进行特别转换以包含高阶关系可能并不总是理想的选择。
 
-**Future work**. Aforementioned limitations leave ample room for future studies, making the realization of the full potential of TDL an interesting endeavour. While the flexible definition of CCs, as compared to, e.g., simplicial complexes, already provides some mitigation to the associated computational challenges, improving the scaling of CCNNs even further will require the exploration of sparsification techniques, randomization and other algorithmic improvements. Besides addressing the aforementioned limitations, promising directions not treated within this paper include explorations of directed [@ausiello2017directed], weighted [@battiloro2023topological], multilayer [@menichetti2016control], and time-varying dynamic topological domains [@torres2021and; @anwar2022synchronization; @yin2022dynamic]. There are also several issues related to the selection of the most appropriate topological domain for a given dataset in the first place, which need further exploration in the future. Additionally, there is a need, but also a research opportunity, to better understand CCNN architectures from a theoretical perspective. This could in turn lead to better architectures. To illustrate this point, consider graph neural networks (GNNs) based on message passing [@gilmer2017neural], which have recently been shown to be as powerful as the Weisfeiler--Lehman isomorphism test^[The Weisfeiler--Lehman isomorphism test [@weisfeiler1968reduction] is a widely-used graph isomorphism algorithm that provides a coloring of a graph's vertices, and this coloring gives a necessary condition for two graphs to be isomorphic.]. [@xu2018powerful; @maron2019provably; @morris2019weisfeiler]. This connection between GNNs and classical graph-based combinatorial invariants has driven theoretical developments of the graph isomorphism problem and has inspired new architectures [@xu2018powerful; @maron2019provably; @arvind2020weisfeiler; @bouritsas2020improving]. We expect that connecting similar developments will also be important for TDL.
+**未来工作**. 上述局限性为今后的研究留下了广阔的空间，使充分发挥 TDL 的潜力成为一项令人感兴趣的工作。 虽然与单纯复形等相比，CCs 的灵活定义已经在一定程度上缓解了相关的计算挑战，但要进一步提高 CCNNs 的扩展性还需要探索稀疏化技术（sparsification techniques,）、随机化和其他算法改进。 除了解决上述局限性外，本文未涉及的有前途的方向还包括对定向[@ausiello2017directed]、加权[@battiloro2023topological]、多层[@menichetti2016control]和时变动态拓扑域（time-varying dynamic topological domains ）[@torres2021and; @anwar2022synchronization; @yin2022dynamic]等的探索。还有几个问题与为给定数据集选择最合适的拓扑域有关，需要在未来进一步探讨。此外，从理论角度更好地理解 CCNN 架构不仅是一种需要，也是一个研究机会，这反过来又会带来更好的架构。 为了说明这一点，可以考虑基于消息传递[@gilmer2017neural]的图神经网络（GNNs），它最近被证明与 Weisfeiler--Lehman 同构测试（isomorphism test）^[Weisfeiler--Lehman 同构测试[@weisfeiler1968reduction]是一种广泛使用的图同构算法，它提供了图顶点的着色方法，这种着色给出了两个图同构的必要条件][@xu2018powerful; @maron2019provably; @morris2019weisfeiler]。GNN 与基于图的经典组合不变性之间的这种联系推动了图同构问题的理论发展，并启发了新的架构 [@xu2018powerful；@maron2019provably；@arvind2020weisfeiler；@bouritsas2020improving]。我们预计，联系类似的发展对 TDL 也很重要。
 
-The topological viewpoint we adopt brings about many interesting properties. For example, we are able to model other types of *topological inductive biases* in our computational architectures, such as the properties that do not change under different discretizations of the underlying domain, e.g., the Euler characteristic that is commonly used to distinguish topological spaces. While isomorphisms are the primary *equivalence relation* in graph theory, *homeomorphisms* and *topological equivalence* are more relevant for data defined on topological spaces, and invariants under homeomorphisms have different machine learning applications^[Intuitively, two topological spaces are equivalent if one of them can be deformed to the other via a continuous transformation.]. Homeomorphism equivalence is more relevant in various applications in which domain discretization is an artifact of data processing, and not an intrinsic part of the data [@sharp2022diffusionnet]. Further, homeomorphism equivalence translates to a similarity question between two structures. Indeed, topological data analysis has been extensively utilized towards addressing the problem of similarity between meshes [@dey2010persistent; @hajij2018visual; @rieck2019persistent]. In geometric data processing, neural network architectures that are agnostic to mesh discretization are often desirable and perform better in practice [@sharp2022diffusionnet]. We anticipate that the development of TDL models will open up new avenues to explore topological invariants across topological domains.
+我们采用的拓扑观点带来了许多有趣的特性。例如，我们能够在我们的计算架构中模拟其他类型的*拓扑归纳偏差（topological inductive biases）*，诸如在底层域的不同离散化下不发生变化的特性，例如通常用于区分拓扑空间的欧拉特性（Euler characteristic）。 同构（isomorphisms ）是图论中最主要的*等价关系（equivalence relation）*，而*同胚（homeomorphisms）*和*拓扑等价（topological equivalence）*与拓扑空间上定义的数据更为相关，同构下的不变性具有不同的机器学习应用^[直观地说，如果两个拓扑空间中的一个可以通过连续变换变形为另一个，那么这两个空间就是等价的]。 在各种应用中，域离散化是数据处理的工具，而不是数据的固有组成部分，在这种情况下，同构等价性就显得更为重要[@sharp2022diffusionnet]。此外，同胚等价（homeomorphism equivalence）还可转化为两个结构之间的相似性问题。事实上，拓扑数据分析已被广泛用于解决网格之间的相似性问题[@dey2010persistent; @hajij2018visual; @rieck2019persistent]。在几何数据处理中，与网格离散化无关的神经网络架构往往是可取的，并且在实践中表现更好[@sharp2022diffusionnet]。我们预计，TDL 模型的开发将为探索拓扑领域的拓扑不变性开辟新的途径。
