--- a/tdlbook-main/rmd/80-glossary.rmd
+++ b/tdlbook-main/rmd/80-glossary.rmd
@@ -1,80 +1,137 @@
-\cleardoublepage
+\cleardoublepage 
 
-# (APPENDIX) Appendix {.unnumbered}
+# (APPENDIX) 附录 {-}
 
-# 术语 {#glossary}
+# 术语{#glossary}
 
-本表列出了本文所涉及的相关概念
+下表概括了本文用到的符号。
 
-| 符号标记    | 描述                                             |
-|--------------------------|----------------------------------------------|
-|<center>Set notations</center>   |
-| $S$     | 抽象实体的非空有限集     |
-| $P_{S}$                                                                                       | 索引集                                                                                                                           |
-| $\mathcal{P}(S)$                                                                              | 集合$𝑆$的幂集                                                                                                                    |
-| $(S,\mathcal{N})$                                                                             | 非空集 $S$ 和邻域拓扑 $\mathcal{N}$ 构成的拓扑空间                                                                               |
-| $\mathcal{N}_{a}(x)$                                                                          | 胞腔$x$的邻接集合                                                                                                                |
-| $\mathcal{N}_{co}(x)$                                                                         | 胞腔$x$的共邻集合                                                                                                                |
-| $\mathcal{N}_{\{ G_1,\ldots,G_n\}}(x)$                                                        | 由邻域矩阵$\{G_1,\dots,G_n\}$确定的$x$的邻居                                                                                     |
-| $\mathcal{N}_{\searrow}(x)$                                                                   | Set of down-incidence of a cell $x$                                                                                              |
-| $\mathcal{N}_{\nearrow}(x)$                                                                   | Set of up-incidence of a cell $x$                                                                                                |
-| $\mathcal{N}_{\searrow,k}(x)$                                                                 | Set of $k$-down incidence of a cell $x$                                                                                          |
-| $\mathcal{N}_{\nearrow,k}(x)$                                                                 | Set of $k$-up incidence of a cell $x$                                                                                            |
-| $\mathbb{N}$ and $\mathbb{Z}_{\ge 0}$                                                         | Set of positive integers and non-negative integers, respectively                                                                 |
-|                                                                                               |                                                                                                                                  |
-| $\mathcal{G}$                                                                                 | Graph                                                                                                                            |
-| $x^k$                                                                                         | Cell $x$ of rank $k$                                                                                                             |
-| $\mbox{rk}$                                                                                   | Rank function                                                                                                                    |
-| $(S, \mathcal{X}, \mbox{rk})$                                                                 | CC, consisting of a set $S$, a subset $\mathcal{X}$ of $\mathcal{P}(S)\setminus\{\emptyset\}$, and a rank function $\mbox{rk}$   |
-| $\dim (\mathcal{X})$                                                                          | Dimension of a CC $\mathcal{X}$                                                                                                  |
-| $\{c_\alpha\}_{\alpha \in I}$                                                                 | Partition into subspaces (cells) indexed by an index set $I$                                                                     |
-| $\mbox{int}(x)$                                                                               | Interior of a cell $x$ in a regular cell complex                                                                                 |
-| $n_\alpha\in \mathbb{N}$                                                                      | Dimension of a cell in a regular cell complex                                                                                    |
-| $0$-cells                                                                                     | Vertices of a CC                                                                                                                 |
-| $1$-cells                                                                                     | Edges of a CC                                                                                                                    |
-| $k$-cells                                                                                     | Cells with rank $k$                                                                                                              |
-| $\mathcal{X}^{(k)}$                                                                           | $k$-skeleton of $\mathcal{X}$, formed by $i$-cells in $\mathcal{X}$ with $i\leq k$                                               |
-| $\mathcal{X}^k$                                                                               | Set of k-cells of $\mathcal{X}$                                                                                                  |
-| $|\mathcal{X}^k|$                                                                             | Cardinality of $\mathcal{X}^k$, that is number of $k$-cells of $\mathcal{X}$                                                     |
-| $\mathcal{X}_{n-hop}(G)$                                                                      | $n$-hop CC of a graph $G$                                                                                                        |
-| $\mathcal{X}_p(G)$                                                                            | Path-based CC of a graph $G$                                                                                                     |
-| $\mathcal{X}_{loop}(G)$                                                                       | Loop-based CC of a graph $G$                                                                                                     |
-| $\mathcal{X}_{SC}(\mathcal{Y})$                                                               | Coface CC of a simplicial complex/CC $\mathcal{Y}$                                                                               |
-|                                                                                               |                                                                                                                                  |
-| $B_{r,k}$                                                                                     | Incidence matrices between $r$-cells and $k$-cells                                                                               |
-| $A_{r,k}$                                                                                     | Adjacency matrices among the cells of $\mbox{X}^{r}$ with respect to the cells of $\mbox{X}^{k}$                                 |
-| $coA_{r,k}$                                                                                   | Coadjacency matrices among the cells of $\mbox{X}^{r}$ with respect to the cells of $\mbox{X}^{k}$                               |
-|                                                                                               |                                                                                                                                  |
-| $\mathbf{W}$                                                                                  | Trainable parameter                                                                                                              |
-| $\mathcal{C}^k(\mathcal{X},\mathbb{R}^d)$                                                     | $k$-cochain space with features in $\mathbb{R}^d$                                                                                |
-| $\mathcal{C}^k$                                                                               | $k$-cochain space with features in some Euclidean space                                                                          |
-| $\mathbf{G}= \{G_1,\ldots,G_m\}$                                                              | Set of cochain maps $G_i$ defined on a complex                                                                                   |
-| $\mathcal{M}_{ \mathbf{G};\mathbf{W}}$                                                        | Merge node                                                                                                                       |
-| $G:C^{s}(\mathcal{X})\to C^{t}(\mathcal{X})$                                                  | Cochain map                                                                                                                      |
-| $(\mathbf{x}_{i_1},\ldots, \mathbf{x}_{i_m})$                                                 | Vector of cochains                                                                                                               |
-| $att^{l}: C^{s}(\mathcal{X})\to C^{s}(\mathcal{X})$                                           | Higher-order attention matrix                                                                                                    |
-| $\mathcal{N}_{\mathcal{Y}_0}=\{\mathcal{Y}_1,\ldots,\sigma_{|\mathcal{N}_{\mathcal{Y}_0}|}\}$ | Set of a complex object in the vicinity of $\mathcal{Y}_0$                                                                       |
-| $a: {\mathcal{Y}_0}\times \mathcal{N}_{\mathcal{Y}_0}\to [0,1]$                               | Higher-order attention function                                                                                                  |
-| $\mbox{CCNN}_{\mathbf{G};\mathbf{W}}$                                                         | CCNN or its tensor diagram representation                                                                                        |
-| $\mathcal{H}_{\mathcal{X}}= (V (\mathcal{H}_{\mathcal{X}}), E(\mathcal{H}_{\mathcal{X}}) )$   | Hasse graph with vertices $V (\mathcal{H}_{\mathcal{X}})$ and edges $E(\mathcal{H}_{\mathcal{X}})$; see Definition \@ref(def:hg) |
+|术语     |                                         描述 |
+|:------|:----------------------|
+| $S$  | 抽象实体组成的非空有限集  |
+| $P_{S}$ | 索引集    |
+| $\mathcal{P}(S)$ | 集合$S$的幂集    |
+| $(S,\mathcal{N})$ | 非空集$S$和领域拓扑（neighborhood topology）$\mathcal{N}$构成的拓扑空间（Topological space）|
+| $\mathcal{N}_{a}(x)$   |胞腔（cell）$x$的邻接集（Adjacency set）         |
+| $\mathcal{N}_{co}(x)$  | Coadjacency set of a cell 胞腔$x$的共邻接集（Coadjacency set） |
+| $\mathcal{N}_{\{ G_1,\ldots,G_n\}}(x)$  | 由邻域矩阵（neighborhood matrices）$\{G_1,\dots,G_n\}$限定的 $x$的邻域  |
+| $\mathcal{N}_{\searrow}(x)$                                                                   | Set of down-incidence of a cell $x$                                                                                                                                          |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{N}_{\nearrow}(x)$                                                                   | Set of up-incidence of a cell $x$                                                                                                                                            |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{N}_{\searrow,k}(x)$                                                                 | Set of $k$-down incidence of a cell $x$                                                                                                                                      |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{N}_{\nearrow,k}(x)$                                                                 | Set of $k$-up incidence of a cell $x$                                                                                                                                        |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathbb{N}$ and $\mathbb{Z}_{\ge 0}$                                                         | Set of positive integers and non-negative integers, respectively                                                                                                             |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| <center>Domains</center>                                                                                                                                                                                                                                                     |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{G}$                                                                                 | Graph                                                                                                                                                                        |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $x^k$                                                                                         | Cell $x$ of rank $k$                                                                                                                                                         |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mbox{rk}$                                                                                   | Rank function                                                                                                                                                                |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $(S, \mathcal{X}, \mbox{rk})$                                                                 | CC, consisting of a set $S$, a subset $\mathcal{X}$ of $\mathcal{P}(S)\setminus\{\emptyset\}$, and a rank function $\mbox{rk}$                                               | 
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\dim (\mathcal{X})$                                                                          | Dimension of a CC $\mathcal{X}$                                                                                                                                              |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\{c_\alpha\}_{\alpha \in I}$                                                                 | Partition into subspaces (cells) indexed by an index set $I$                                                                                                                 |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mbox{int}(x)$                                                                               | Interior of a cell $x$ in a regular cell complex                                                                                                                             |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $n_\alpha\in \mathbb{N}$                                                                      | Dimension of a cell in a regular cell complex                                                                                                                                |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $0$-cells                                                                                     | Vertices of a CC                                                                                                                                                             |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $1$-cells                                                                                     | Edges of a CC                                                                                                                                                                |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $k$-cells                                                                                     | Cells with rank $k$                                                                                                                                                          |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{X}^{(k)}$                                                                           | $k$-skeleton of $\mathcal{X}$, formed by $i$-cells in $\mathcal{X}$ with $i\leq k$                                                                                           |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{X}^k$                                                                               | Set of k-cells of $\mathcal{X}$                                                                                                                                              |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $|\mathcal{X}^k|$                                                                             | Cardinality of $\mathcal{X}^k$, that is number of $k$-cells of $\mathcal{X}$                                                                                                 |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{X}_{n-hop}(G)$                                                                      | $n$-hop CC of a graph $G$                                                                                                                                                    |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{X}_p(G)$                                                                            | Path-based CC of a graph $G$                                                                                                                                                 | 
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{X}_{loop}(G)$                                                                       | Loop-based CC of a graph $G$                                                                                                                                                 |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{X}_{SC}(\mathcal{Y})$                                                               | Coface CC of a simplicial complex/CC $\mathcal{Y}$                                                                                                                           |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| <center>Matrix notations</center>                                                                                                                                                                                                                                            |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $B_{r,k}$                                                                                     | Incidence matrices between $r$-cells and $k$-cells                                                                                                                           |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $A_{r,k}$                                                                                     | Adjacency matrices among the cells of $\mbox{X}^{r}$ with respect to the cells of $\mbox{X}^{k}$                                                                             |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $coA_{r,k}$                                                                                   | Coadjacency matrices among the cells of $\mbox{X}^{r}$ with respect to the cells of $\mbox{X}^{k}$                                                                           |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| <center>CCNNs</center>                                                                                                                                                                                                                                                       |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathbf{W}$                                                                                  | Trainable parameter                                                                                                                                                          |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{C}^k(\mathcal{X},\mathbb{R}^d)$                                                     | $k$-cochain space with features in $\mathbb{R}^d$                                                                                                                            |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{C}^k$                                                                               | $k$-cochain space with features in some Euclidean space                                                                                                                      |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathbf{G}= \{G_1,\ldots,G_m\}$                                                              | Set of cochain maps $G_i$ defined on a complex                                                                                                                               |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{M}_{ \mathbf{G};\mathbf{W}}$                                                        | Merge node                                                                                                                                                                   |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $G:C^{s}(\mathcal{X})\to C^{t}(\mathcal{X})$                                                  | Cochain map                                                                                                                                                                  |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $(\mathbf{x}_{i_1},\ldots, \mathbf{x}_{i_m})$                                                 | Vector of cochains                                                                                                                                                           |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $att^{l}: C^{s}(\mathcal{X})\to C^{s}(\mathcal{X})$                                           | Higher-order attention matrix                                                                                                                                                |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{N}_{\mathcal{Y}_0}=\{\mathcal{Y}_1,\ldots,\sigma_{|\mathcal{N}_{\mathcal{Y}_0}|}\}$ | Set of a complex object in the vicinity of  $\mathcal{Y}_0$                                                                                                                  |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $a: {\mathcal{Y}_0}\times \mathcal{N}_{\mathcal{Y}_0}\to [0,1]$                               |  Higher-order attention function                                                                                                                                             |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mbox{CCNN}_{\mathbf{G};\mathbf{W}}$                                                         | CCNN or its tensor diagram representation                                                                                                                                    |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\mathcal{H}_{\mathcal{X}}= (V (\mathcal{H}_{\mathcal{X}}), E(\mathcal{H}_{\mathcal{X}}) )$   | Hasse graph with vertices $V (\mathcal{H}_{\mathcal{X}})$ and edges $E(\mathcal{H}_{\mathcal{X}})$; see Definition \@ref(def:hg)                                             |
++-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
 The table below summarizes the paper's acronyms.
 
++---------+----------------------------------------------------+
 | Acronym | Description                                        |
-|---------|----------------------------------------------------|
++=========+====================================================+
 | AGD     | Average geodesic distance                          |
++---------+----------------------------------------------------+
 | CC      | Combinatorial complex                              |
++---------+----------------------------------------------------+
 | CCANN   | Combinatorial complex attention neural network     |
++---------+----------------------------------------------------+
 | CCCNN   | Combinatorial complex convolutional neural network |
++---------+----------------------------------------------------+
 | CCNN    | Combinatorial complex neural network               |
++---------+----------------------------------------------------+
 | CNN     | Convolutional neural network                       |
++---------+----------------------------------------------------+
 | DEC     | Discrete exterior calculus                         |
++---------+----------------------------------------------------+
 | GDL     | Geometric deep learning                            |
++---------+----------------------------------------------------+
 | GNN     | Graph neural network                               |
++---------+----------------------------------------------------+
 | MOG     | Mapper on graphs                                   |
++---------+----------------------------------------------------+
 | RNN     | Recurrent neural network                           |
++---------+----------------------------------------------------+
 | SCoNe   | Simplicial complex network                         |
++---------+----------------------------------------------------+
 | Sub-CC  | sub-combinatorial complex                          |
-| TDA     | Topological data analysis                          |
++---------+----------------------------------------------------+
+|TDA      | Topological data analysis                          |
++---------+----------------------------------------------------+
 | TDL     | Topological deep learning                          |
++---------+----------------------------------------------------+
 | TQFT    | Topological quantum field theory                   |
++---------+----------------------------------------------------+
